--- a/8720181313424/css/8720181313424.css
+++ b/8720181313424/css/8720181313424.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Metropolis&display=swap");
 
-.a8720181313424 {
+.calosc {
   display: block;
   margin: 0;
   padding: 0;
@@ -8,29 +9,16 @@
   text-decoration: solid;
   max-width: 970px;
   min-height: max-content;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-.b8720181313424 {
+.szesciokaty {
+  padding-top: 3%;
+  padding-bottom: 3%;
   display: block;
   font-size: 26px;
   text-align: center;
-}
-
-.c8720181313424 {
-  display: block;
-  padding-top: 5%;
-  color: white;
-  font-size: 30px;
-  text-align: center;
-  text-decoration: solid;
-}
-
-.d8720181313424 {
-  display: block;
-  text-align: left;
-  font-size: 18px;
-  text-decoration: double, solid;
-  padding: 1%;
 }
 
 .gora {
@@ -120,5 +108,63 @@
 }
 
 .kwadraty {
-  background-color: black;
+  display: block;
+  font-size: 18px;
+  text-decoration: double, solid;
+  padding: 5%;
+}
+
+.kwadraty__obrazy {
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  min-width: 220px;
+  min-height: 220px;
+}
+.kwadraty__obrazy--kwadrat1 {
+  background-image: url(/8720181313424/img/kwadrat1.png);
+}
+.kwadraty__obrazy--kwadrat2 {
+  background-image: url(/8720181313424/img/kwadrat2.png);
+}
+.kwadraty__obrazy--kwadrat3 {
+  background-image: url(/8720181313424/img/kwadrat3.png);
+}
+.kwadraty__obrazy--kwadrat4 {
+  background-image: url(/8720181313424/img/kwadrat4.png);
+}
+
+.kwadraty__naglowek {
+  padding-top: 1em;
+  padding-bottom: 2em;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 900;
+}
+
+.kwadraty__tekst {
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bolder;
+  padding-bottom: 1em;
+}
+
+.dol {
+  background-color: #222627;
+  background-image: url(/8720181313424/img/dolny_modul.png);
+  background-size: 100%;
+  background-repeat: no-repeat;
+  background-position: 0% 100%;
+  height: 61vw;
+  max-height: 670px;
+  min-height: 550px;
+  display: block;
+  color: white;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 30px;
+  font-weight: 800;
+  text-align: center;
+  text-decoration: solid;
+  padding-top: 1.5em;
+  padding-left: 1.5em;
+  padding-right: 1.5em;
 }
