--- a/8720181222443/css/8720181222443.css
+++ b/8720181222443/css/8720181222443.css
@@ -11,7 +11,6 @@
 }
 
 .gora {
-  background-color: red;
   background-color: #cfe3db;
   background-image: url(/8720181222443/img/tlo1.png);
   background-size: 100%;
@@ -58,12 +57,14 @@
 
 .lab {
   background-color: #fff;
+  background-color: #cfe3db;
   background-image: url(/8720181222443/img/tlo2.png);
   background-size: 100%;
   background-repeat: no-repeat;
+  background-position: 0% 100%;
   margin-bottom: 1px;
   height: 600px;
-  min-height: 550px;
+  min-height: 200px;
   margin-left: 15px;
   margin-right: 15px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
